crates/oxc_css/tests/error/comment/line.snap
---
source: crates/oxc_css/tests/error.rs
---
error: CSS rule is expected
  ┌─ line.css:1:1
  │
1 │ // comment
  │ ^


